whatever-commit-Step1

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -11,6 +11,6 @@
     Content :<span th:text="${message.content}"></span><br />
     Posteddate :<span th:text="${message.posteddate}"></span><br />
     Sentby :<span th:text="${message.sentby}"></span><br />
-    <a th:href="@{/delete/{id}(id=${message.id})}">Delete this course</a>
+    <a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a>
 </body>
 </html>
